--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "decap-cms-app": "^3.1.10",
     "eleventy-plugin-embed-everything": "^1.18.2",
     "gsap": "3.11.0",
-    "holygrailcss": "^3.0.3",
+    "holygrail3": "^0.0.8",
     "image-size": "^1.1.1",
     "lenis": "^1.1.5",
     "locomotive-scroll": "^4.1.4",
